# recruta-ai-training

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/llm-fine-tuning-guide/: README.md  SKILL.md
.agents/skills/llm-fine-tuning-guide/examples/: full_fine_tuning.py  lora_fine_tuning.py  qlora_fine_tuning.py
.agents/skills/llm-fine-tuning-guide/scripts/: data_preparation.py  evaluation_metrics.py
configs/: base.yaml  lite.yaml  micro.yaml
docs/: deploy-gratuito.md
notebooks/: recruta_colab_training.ipynb
scripts/: prepare_data.py  publish.py  train.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  ingestion.py  preparation.py
src/models/: __init__.py  unsloth_loader.py
src/shared/: __init__.py  errors.py  protocols.py
src/training/: __init__.py  pipeline.py  publisher.py  trainer.py
